audio-src,audio-sink: Use lower latency values on pulsesrc/pulsesink

This sets the pulsesink and pulsesrc buffer/latency parameters to be
lower and more voip-friendly. If the system cannot provide or keep up
with these values, PulseAudio will automatically try to adapt and
provide larger values that are achievable.

https://bugzilla.gnome.org/show_bug.cgi?id=663124